# 21sh

./: CMakeLists.txt  Makefile  README.md
includes/: 21sh.h  builtins.h  env.h  execution.h  ft_21sh.h  line_editing.h  quotes.h  signals_header.h
src/: helpers.c  init.c  main.c  signals.c  signals2.c  terminal_mode.c
src/builtins/: bi_cd.c  bi_clear.c  bi_echo.c  bi_env.c  bi_set_unset_env.c
src/env/: env_commands.c  env_init.c
src/execution/: check_bi.c  dollar_replace.c  execute.c  pipes.c  redirection.c
src/line_editing/: copy_paste.c  cursor_basic_moves.c  cursor_word_home_moves.c  history.c  history_init_display.c  history_scroll.c  insertion_deletion.c  line_edit_helpers.c
src/quotes/: quotes.c
